Aggiornata GUI